# EzTest

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  discussion.md  question.md
.github/workflows/: codeql-analysis.yml
doc/: asserts.md
eztest/: CMakeLists.txt  build  eztest.c  eztest.h  main.c  options.h  runner.c
eztest/common/: color.h  result.h
eztest/core/: about.h  eztest.c  eztest.h  main.c  options.h
